syntax = "proto3";
option java_multiple_files = true;
option java_package = "org.jinn.raft.proto";
option java_outer_classname = "RaftProto";

service RaftService {
    rpc RequestVote (VoteRequest) returns (VoteResponse);
    rpc AppendEntries (AppendEntryRequest) returns (AppendEntryResponse);
}

message VoteRequest {
    int32 term = 1;
    string candidate_id = 2;
    int32 last_log_index = 3;
    int32 last_log_term = 4;
}

message VoteResponse {
    string voter_id = 1;
    bool has_voted = 2;
    int32 term = 3;
}

message LogEntry {
    int32 term = 1;
    int32 index = 2;
    bytes command = 3;
}

message AppendEntryRequest {
    int32 term = 1;
    string leader_id = 2;
    int32 prev_log_index = 3;
    int32 prev_log_term = 4;
    int32 leader_commit = 5;
    repeated LogEntry entries = 6;
}

message AppendEntryResponse {
    string follower_id = 1;
    bool is_replicated = 2;
    int32 term = 3;
    int32 match_index = 4;
    int32 prev_log_term = 5;
}